--- a/src/ShiroTrie.csproj
+++ b/src/ShiroTrie.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>ShiroTrie</RootNamespace>
     <AssemblyName>ShiroTrie</AssemblyName>
     <Version>1.0.2</Version>
