--- a/src/ShiroTrie.csproj
+++ b/src/ShiroTrie.csproj
@@ -10,5 +10,12 @@
     <PackageProjectUrl>https://github.com/nbaztec/shiro-trie</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nbaztec/shiro-trie</RepositoryUrl>
     <PackageTags>Apache Shiro Permissions Trie</PackageTags>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
